tests/spec/emit/snapshots/array_of_concrete_widens_to_interface_elements_in_assignment.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  struct Boom {}
  
  impl Boom {
    fn Error(self) -> string {
      "boom"
    }
  }
  
  struct Quiet {}
  
  impl Quiet {
    fn Error(self) -> string {
      "quiet"
    }
  }
  
  fn test() {
    let mut errs: Array<error, 2> = [Quiet {}, Quiet {}]
    let concrete: Array<Boom, 2> = [Boom {}, Boom {}]
    errs = concrete
    if errs[0].Error() != "boom" {
      panic("assignment lost its interface elements")
    }
  }
---
package main

type Boom struct{}

func (b Boom) Error() string {
	return "boom"
}

type Quiet struct{}

func (q Quiet) Error() string {
	return "quiet"
}

func test() {
	errs := [2]error{Quiet{}, Quiet{}}
	concrete := [2]Boom{{}, {}}
	var boxed [2]error
	for i := range concrete {
		boxed[i] = concrete[i]
	}
	errs = boxed
	if errs[0].Error() != "boom" {
		panic("assignment lost its interface elements")
	}
}
