tests/spec/emit/snapshots/array_of_concrete_widens_to_interface_elements_in_let_annotation.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  struct Boom {}
  
  impl Boom {
    fn Error(self) -> string {
      "boom"
    }
  }
  
  fn first(errs: Array<error, 2>) -> string {
    errs[0].Error()
  }
  
  fn test() {
    let concrete: Array<Boom, 2> = [Boom {}, Boom {}]
    let widened: Array<error, 2> = concrete
    if first(widened) != "boom" {
      panic("annotated array binding lost its interface elements")
    }
  }
---
package main

type Boom struct{}

func (b Boom) Error() string {
	return "boom"
}

func first(errs [2]error) string {
	return errs[0].Error()
}

func test() {
	concrete := [2]Boom{{}, {}}
	var boxed [2]error
	for i := range concrete {
		boxed[i] = concrete[i]
	}
	widened := boxed
	if first(widened) != "boom" {
		panic("annotated array binding lost its interface elements")
	}
}
