tests/spec/emit/snapshots/array_of_concrete_widens_to_interface_elements_in_return_position.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  struct Boom {}
  
  impl Boom {
    fn Error(self) -> string {
      "boom"
    }
  }
  
  fn widen() -> Array<error, 2> {
    let concrete: Array<Boom, 2> = [Boom {}, Boom {}]
    concrete
  }
  
  fn test() {
    if widen()[1].Error() != "boom" {
      panic("returned array lost its interface elements")
    }
  }
---
package main

type Boom struct{}

func (b Boom) Error() string {
	return "boom"
}

func widen() [2]error {
	concrete := [2]Boom{{}, {}}
	var boxed [2]error
	for i := range concrete {
		boxed[i] = concrete[i]
	}
	return boxed
}

func test() {
	if widen()[1].Error() != "boom" {
		panic("returned array lost its interface elements")
	}
}
