tests/spec/emit/snapshots/array_of_concrete_widens_to_interface_elements_in_struct_field.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  struct Boom {}
  
  impl Boom {
    fn Error(self) -> string {
      "boom"
    }
  }
  
  struct Holder {
    errs: Array<error, 2>,
  }
  
  fn test() {
    let concrete: Array<Boom, 2> = [Boom {}, Boom {}]
    let holder = Holder { errs: concrete }
    if holder.errs[0].Error() != "boom" {
      panic("struct field lost its interface elements")
    }
  }
---
package main

type Boom struct{}

func (b Boom) Error() string {
	return "boom"
}

type Holder struct {
	errs [2]error
}

func test() {
	concrete := [2]Boom{{}, {}}
	var boxed [2]error
	for i := range concrete {
		boxed[i] = concrete[i]
	}
	holder := Holder{errs: boxed}
	if holder.errs[0].Error() != "boom" {
		panic("struct field lost its interface elements")
	}
}
