tests/spec/emit/snapshots/array_to_slice_chain_keeps_copy_for_excluded_methods.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  fn f(arr: Array<int, 3>) -> (Slice<int>, int, int, Slice<int>, Slice<int>) {
    let doubled = arr.to_slice().map(|x| x * 2)
    let stomped = arr.to_slice().copy_from([7, 8])
    let room = arr.to_slice().capacity()
    let grown = arr.to_slice().reserve(10)
    let extended = arr.to_slice().append(4)
    (doubled, stomped, room, grown, extended)
  }
---
package main

import "slices"

func f(arr [3]int) ([]int, int, int, []int, []int) {
	src := slices.Clone(arr[:])
	doubled := make([]int, len(src))
	for i, x := range src {
		doubled[i] = x * 2
	}
	stomped := copy(slices.Clone(arr[:]), []int{7, 8})
	room := cap(slices.Clone(arr[:]))
	grown := slices.Grow(slices.Clone(arr[:]), 10)
	extended := append(slices.Clone(arr[:]), 4)
	return doubled, stomped, room, grown, extended
}
